@@ -40,9 +40,13 @@ public:
 	string help;  ///< help for the argument variable.
 	int    type;  ///< 0 = number, 1 = string
 	string ctgr;  ///< help category
+	int    repe;  ///< if this is set to 1: then this option can be repeated
+					  ///< if this is set to 0: command line will always overwrite the gcard
+	
+	aopt() {repe = 0;}
 	
 public:
-  	void printSetting();
+	void printSetting();
 };
 
 
@@ -53,29 +57,29 @@ public:
 /// the option string given at command line or gcard\n
 class goptions
 {
-	public:
-		
-		goptions();
-		~goptions(){;}
-		
-		virtual void setGoptions();                 ///< Function to fill optMap
-		void setOptions();                          ///< Define option Map
-		void scanGcard(string file);                ///< Scan option file for options
-		int setOptMap(int argc, char **args);       ///< Sets map from command line arguments
-		int setOptMap(int argc, char **args, int i) ///< Sets map from command line arguments - include ignoreNotFound
-		{
-			ignoreNotFound = i;
-			return setOptMap(argc, args);
-		}
+public:
 	
-		map<string, aopt> optMap;              ///< Options map
-		map<string, string> getOptMap();       ///< Returns a map<string, string> with all options and values
-		
-		vector<aopt> getArgs(string);          ///< get a vector of arguments matching a string
+	goptions();
+	~goptions(){;}
 	
-		int ignoreNotFound;                    ///< if this is not 0, it means the options
-	                                           ///  could be shared with another application. So ignore
-	                                           ///  the case that options are not found in the current application
+	virtual void setGoptions();                 ///< Function to fill optMap
+	void setOptions();                          ///< Define option Map
+	void scanGcard(string file);                ///< Scan option file for options
+	int setOptMap(int argc, char **args);       ///< Sets map from command line arguments
+	int setOptMap(int argc, char **args, int i) ///< Sets map from command line arguments - include ignoreNotFound
+	{
+		ignoreNotFound = i;
+		return setOptMap(argc, args);
+	}
+	
+	map<string, aopt> optMap;              ///< Options map
+	map<string, string> getOptMap();       ///< Returns a map<string, string> with all options and values
+	
+	vector<aopt> getArgs(string);          ///< get a vector of arguments matching a string
+	
+	int ignoreNotFound;                    ///< if this is not 0, it means the options
+														///  could be shared with another application. So ignore
+														///  the case that options are not found in the current application
 };
 
 
